ayarlar seçenekleri eklendi

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="tr">
-	<head>
-		<meta charset="UTF-8">
-		<title>Habersiz Kalma</title>
-		<link rel="shortcut icon" href="icon16.png">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
-	<body>
-		<div class="container">
-			<div id="article" class="article"></div>
-		</div>
-		<script src="js/jquery.min.js"></script>
-		<script src="js/script.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Habersiz Kalma</title>
+    <link rel="shortcut icon" href="icon16.png">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+  </head>
+  <body>
+    <div class="container">
+      <div id="article" class="article"></div>
+    </div>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/article.js"></script>
+  </body>
 </html>
