--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Habersiz Kalma</title>
-    <link rel="shortcut icon" href="icon16.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div class="container">
-      <div id="article" class="article"></div>
+      <div class="article">
+        <p class="title"></p>
+        <p class="description"></p>
+        <p class="more"></p>
+      </div>
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/article.js"></script>
