--- a/options.html
+++ b/options.html
@@ -30,6 +30,11 @@
           <input type="radio" id="yasam" name="subject-radio" value="yasam">
           <label for="yasam"><span></span>Yaşam</label>
         </form>
+        <!--<div class="line"></div>
+        <form class="image">
+          <input type="checkbox" id="image" checked>
+          <label for="image"><span></span>Haber resimleri yüksek kalitede yüklensin</label>
+        </form>-->
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
