yeni ayarlar eklendi

--- a/options.html
+++ b/options.html
@@ -11,30 +11,31 @@
         <p class="title" style="opacity: .8">Haber Seçenekleri</p>
         <p class="description">Bu uygulamanın asıl amacı Türkiye gündemindeki haberleri öğrenebilmeniz. Gündem konusunu değiştirmenizi <u>önermiyoruz</u>, ama sürekli Türkiye gündemindeki aynı haberlerden sıkıldıysanız bir değişiklik yapıp diğer konuları deneyebilirsiniz.</p>
         <form class="subject">
-          <input type="radio" id="gundem" name="subject-radio" value="gundem">
+          <input type="radio" id="gundem" name="subjectChoice" value="gundem">
           <label for="gundem"><span></span>Öne Çıkanlar</label>
-          <input type="radio" id="turkiye" name="subject-radio" value="turkiye">
+          <input type="radio" id="turkiye" name="subjectChoice" value="turkiye">
           <label for="turkiye"><span></span>Türkiye</label>
-          <input type="radio" id="dunya" name="subject-radio" value="dunya">
+          <input type="radio" id="dunya" name="subjectChoice" value="dunya">
           <label for="dunya"><span></span>Dünya</label>
-          <input type="radio" id="spor" name="subject-radio" value="spor">
+          <input type="radio" id="spor" name="subjectChoice" value="spor">
           <label for="spor"><span></span>Spor</label>
-          <input type="radio" id="ekonomi" name="subject-radio" value="ekonomi">
+          <input type="radio" id="ekonomi" name="subjectChoice" value="ekonomi">
           <label for="ekonomi"><span></span>Ekonomi</label>
-          <input type="radio" id="teknoloji" name="subject-radio" value="teknoloji">
+          <input type="radio" id="teknoloji" name="subjectChoice" value="teknoloji">
           <label for="teknoloji"><span></span>Teknoloji</label>
-          <input type="radio" id="sanat" name="subject-radio" value="sanat">
+          <input type="radio" id="sanat" name="subjectChoice" value="sanat">
           <label for="sanat"><span></span>Sanat</label>
-          <input type="radio" id="saglik" name="subject-radio" value="saglik">
+          <input type="radio" id="saglik" name="subjectChoice" value="saglik">
           <label for="saglik"><span></span>Sağlık</label>
-          <input type="radio" id="yasam" name="subject-radio" value="yasam">
+          <input type="radio" id="yasam" name="subjectChoice" value="yasam">
           <label for="yasam"><span></span>Yaşam</label>
         </form>
-        <!--<div class="line"></div>
+        <div class="line"></div>
+        <p class="description">İnternet kaliteniz kötüyse haber görselinin kalitesini düşürebilirsiniz.</p>
         <form class="image">
-          <input type="checkbox" id="image" checked>
-          <label for="image"><span></span>Haber resimleri yüksek kalitede yüklensin</label>
-        </form>-->
+          <input type="checkbox" id="imageQuality" name="imageQuality">
+          <label for="imageQuality"><span></span>Haber görselleri yüksek kalitede yüklensin</label>
+        </form>
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
