--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="settings">
         <p class="title" style="opacity: .8">Haber Seçenekleri</p>
-        <p class="description">Bu uygulamanın asıl amacı Türkiye gündemindeki haberleri öğrenebilmeniz. Gündem konusunu değiştirmenizi <u>önermiyoruz</u>, ama sürekli Türkiye gündemindeki aynı haberlerden sıkıldıysanız bir değişiklik yapıp diğer konuları deneyebilirsiniz.</p>
+        <p class="description">Uygulamamızın amacı Türkiye gündeminden habersiz kalmamak. Bu yüzden gündem konusunu değiştirmenizi <u>önermiyoruz</u>. Fakat isteğinize göre aşağıdaki başlıklardan tercih ettiğiniz gündemi, haber güncellemesi olarak alabilirsiniz.</p>
         <form class="subject">
           <input type="radio" id="gundem" name="subjectChoice" value="gundem">
           <label for="gundem"><span></span>Öne Çıkanlar</label>
@@ -29,6 +29,10 @@
           <label for="saglik"><span></span>Sağlık</label>
           <input type="radio" id="yasam" name="subjectChoice" value="yasam">
           <label for="yasam"><span></span>Yaşam</label>
+        </form>
+        <form class="quickSetting">
+          <input type="checkbox" id="quickSetting" name="quickSetting">
+          <label for="quickSetting"><span></span>Uygulama ikonuna tıklayarak haber kategorisini değiştirmeyi aktif et</label>
         </form>
         <div class="line"></div>
         <p class="description">İnternet kaliteniz kötüyse haber görselinin kalitesini düşürebilirsiniz.</p>
