--- a/options.html
+++ b/options.html
@@ -32,7 +32,7 @@
         </form>
         <form class="quickSetting">
           <input type="checkbox" id="quickSetting" name="quickSetting">
-          <label for="quickSetting"><span></span>Uygulama ikonuna tıklayarak haber kategorisini değiştirmeyi aktif et</label>
+          <label for="quickSetting"><span></span>Uygulama ikonuna tıklayarak haber kategorisini değiştirebilmeyi aktif et (test aşamasında)</label>
         </form>
         <div class="line"></div>
         <p class="description">İnternet kaliteniz kötüyse haber görselinin kalitesini düşürebilirsiniz.</p>
