--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Habersiz Kalma</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container">
-      <div class="article">
-        <p class="title"></p>
-        <p class="description"></p>
-        <p class="more"></p>
-      </div>
+      <div class="article"></div>
     </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/article.js"></script>
+    <div class="options-button">
+      <a href="options.html">
+        <img src="img/options.png" title="Seçenekler">
+      </a>
+    </div>
+    <script src="js/jquery.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
