--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </label>
       </div>
       <div class="form-group">
-        <a href="https://github.com/denizcdemirci/habersiz-kalma/issues">Eğer bir hata ile karşılaşırsanız lütfen bize bildirin</a>
+        <a href="https://github.com/denizcdemirci/habersiz-kalma/issues">Eğer bir hata ile karşılaşırsanız lütfen bize bildirin.</a>
       </div>
     </div>
     <div class="band">
@@ -68,7 +68,7 @@
       <div class="band-navigation">
         <ul>
           <li class="saved">
-            <p>Değişiklikler bir sonraki sekme açışınızda uygulanacaktır</p>
+            <p>Değişiklikler bir sonraki sekme açışınızda uygulanacaktır.</p>
           </li>
           <li>
             <img class="source-logo" src="img/undefined.png" title="Haber Kaynağı">
