--- a/index.html
+++ b/index.html
@@ -51,13 +51,20 @@
       </div>
       <div class="form-group">
         <label>
+          <input type="checkbox" name="color">
+          <span></span>
+          Haber görsellerini renkli yap
+        </label>
+      </div>
+      <div class="form-group">
+        <label>
           <input type="checkbox" name="background" checked>
           <span></span>
           Sekme arka planını renkli yap
         </label>
       </div>
       <div class="form-group">
-        <a href="https://github.com/denizcdemirci/habersiz-kalma/issues">Eğer bir hata ile karşılaşırsanız lütfen bize bildirin.</a>
+        <a href="https://chrome.google.com/webstore/detail/habersiz-kalma/ojlmnblnndgpdmggodkenhcoioeachie/support">Bir hata ile karşılaşırsanız lütfen bize bildirin.</a>
       </div>
     </div>
     <div class="band">
@@ -80,6 +87,6 @@
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
